--- a/public/styles/cartPage.css
+++ b/public/styles/cartPage.css
@@ -25,7 +25,7 @@ main {
 
 .cart {
   display: grid;
-  grid-template-rows: auto auto 1fr auto;
+  grid-template-rows: auto 1fr auto;
 }
 
 .cart > h1,
@@ -36,12 +36,7 @@ main {
 }
 
 .cart-header {
-  display: grid;
-  grid-template-columns: auto 2fr 1fr auto 1fr auto;
-  gap: 1rem;
-  padding-top: 1.5rem;
-  padding-bottom: 0.5rem;
-  border-bottom: 1px solid var(--text-color);
+  display: none;
 }
 
 .cart-header > p:first-child {
