--- a/views/partials/bookCard-related.ejs
+++ b/views/partials/bookCard-related.ejs
@@ -1,5 +1,16 @@
-<a href="/book/<%= book._id %>">
-   <img src="/assets/images/placeholder.png" alt="<%= book.title %>"/>
-   <h3> <%= book.title %> </h3>
-   <p> <%= book.author %> </p>
+<a href="/book/<%= book._id %>" class="related-book-card">
+  <% if (book.promotion) { %>
+  <div class="promo-badge">-<%= book.promotion.discountPercent %>%</div>
+  <% } %>
+  <img src="/assets/images/placeholder.png" alt="<%= book.title %>" />
+  <h3><%= book.title %></h3>
+  <p><%= book.author %></p>
+  <p class="related-price">
+    <% if (book.promotion) { %>
+    <span class="original-price">$<%= book.promotion.originalPrice.toFixed(2) %></span>
+    <span class="promo-price">$<%= book.promotion.promotionalPrice.toFixed(2) %></span>
+    <% } else { %>
+    <span>$<%= book.price ? book.price.toFixed(2) : '0.00' %></span>
+    <% } %>
+  </p>
 </a>
