--- a/views/partials/bookCard-search.ejs
+++ b/views/partials/bookCard-search.ejs
@@ -1,12 +1,22 @@
 <a href="/book/<%= book._id %>" class="book-card">
-   <button class="wishlist-button" id="addToWishlist" data-id="<%= book._id %>">
-      <img src="assets/svg/bookmark.svg" alt="bookmark icon" class="icon">
-   </button>
-   <img src="/assets/images/placeholder.png" alt="Book Cover">
-   <div>
-      <h3 class="title" data-rating="<%= book.averageRating %>"> <%= book.title %> </h3>
-      <p class="author"> <%= book.author %> </p>
-      <p class="price"> <span> $<%= book.price.toFixed(2) %> </span> / 1 pc </p>
-   </div>
-   <button class="button-primary" id="addToCart" data-id="<%= book._id%>"> Add to Cart </button>
+  <button class="wishlist-button" id="addToWishlist" data-id="<%= book._id %>">
+    <img src="assets/svg/bookmark.svg" alt="bookmark icon" class="icon" />
+  </button>
+  <% if (book.promotion) { %>
+  <div class="promo-badge">-<%= book.promotion.discountPercent %>%</div>
+  <% } %>
+  <img src="/assets/images/placeholder.png" alt="Book Cover" />
+  <div>
+    <h3 class="title" data-rating="<%= book.averageRating %>"><%= book.title %></h3>
+    <p class="author"><%= book.author %></p>
+    <p class="price">
+      <% if (book.promotion) { %>
+      <span class="original-price">$<%= book.promotion.originalPrice.toFixed(2) %></span>
+      <span class="promo-price">$<%= book.promotion.promotionalPrice.toFixed(2) %></span>
+      <% } else { %>
+      <span>$<%= book.price.toFixed(2) %></span>
+      <% } %> / 1 pc
+    </p>
+  </div>
+  <button class="button-primary" id="addToCart" data-id="<%= book._id%>">Add to Cart</button>
 </a>
